Sat Jul 10 11:41:54 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* test/psych/test_date_time.rb (TestDateTime#test_round_trip_with_offset):
	  test for [ruby-core:31023].

Mon Jul  5 12:32:01 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/scalar_scanner.rb (parse_string): support
	  timezones that are not one hour off. [ruby-core:31023]

	* ext/psych/lib/psych/visitors/yaml_tree.rb: ditto

Sat Jul  3 09:47:26 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb(visit_Psych_Nodes_Scalar):
	  teaching Psych to deserialize DateTime objects. [Bug #1390]

	* ext/psych/lib/psych/visitors/yaml_tree.rb(visit_DateTime): added a
	  method for serializing DateTime objects.

	* ext/psych/lib/psych/scalar_scanner.rb(parse_time): add method for
	  parsing times objects from a string.
	
	* test/psych/test_date_time.rb: tests for dumping DateTime objects.

Sat Jul  3 09:13:55 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb (visit_Time): use
	  Time#nsec to accurately serialize time objects. [ruby-core:29233]

Tue Jul  6 00:34:50 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* vm.c (thread_free): free altstack to prevent memory leak.  a patch
	  from Tomoyuki Chikanaga in [ruby-dev:41815]. [Bug #3537]

Tue Jul  6 00:29:27 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* string.c (NONASCII_MASK): NONASCII_MASK must be unsigned.
	  [ruby-dev:41782]

Fri Jul  2 19:07:09 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* io.c (argf_inplace_mode_set): prohibits an assignment
	  of a tainted value. Patch by unak.

	* util.c, file.c: prevents a buffer over-run on windows.
	  Patch by unak.

Tue Jun 29 19:39:59 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_win32ole_method.rb (is_ruby64): check
	  ruby binary is mswin64 or mingw64. [ruby-dev:41756]

Mon Jun 28 20:32:33 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>
