@@ -1,3 +1,9 @@
+Sun Jul  4 17:13:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* io.c (swallow, prepare_getline_args, rb_io_getline_1): fix for
+	  paragraph mode reading in non-ascii-compatible encoding.
+	  [ruby-dev:41803]
+
 Sat Jul 10 11:41:54 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
 
 	* test/psych/test_date_time.rb (TestDateTime#test_round_trip_with_offset):
